force-app/main/default/objects/SS_Product_Action__mdt/SS_Product_Action__mdt.object-meta.xml
<CustomObject>
    <description>Product Action definition - used in an SS Product Action Set</description>
    <label>SS Product Action</label>
    <pluralLabel>SS Product Action</pluralLabel>
</CustomObject>