force-app/main/default/objects/SS_Product_Action__mdt/fields/Action_Title__c.field-meta.xml
<CustomField>
    <fullName>Action_Title__c</fullName>
    <inlineHelpText>Action menu item tooltip</inlineHelpText>
    <label>Action Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>