force-app/main/default/objects/SS_Product_Action__mdt/fields/Action_Value__c.field-meta.xml
<CustomField>
    <fullName>Action_Value__c</fullName>
    <inlineHelpText>Enter the action value for the Action Type Selected - Lightning Flow Name or URL</inlineHelpText>
    <label>Action Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>