force-app/main/default/objects/SS_Product_Action__mdt/fields/New_Window__c.field-meta.xml
<CustomField>
    <fullName>New_Window__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to enable the action in a new Tab or Window</inlineHelpText>
    <label>New Window</label>
    <type>Checkbox</type>
</CustomField>